# openmi-openda-wrapper

./: ProjectHome.md
DHI.MikeShe/MikeSheInOpenDA/: MikeSheInOpenDA.csproj  MikeSheOpenMIModelFactory.cs  MikeSheOpenMITimespaceComponentExtensions.cs
DHI.MikeShe/MikeSheInOpenDA.Spatial/: GeometryTypes.cs  MikeSheInOpenDA.Spatial.csproj
DHI.MikeShe/MikeSheInOpenDA.UnitTests/: MikeSheInOpenDA.UnitTests.csproj
Karup/Ensembles/0/: Karup_DA.SHE  MIKESHE_WM_Karup.omi  MIKESHE_WM_Karup_DA.omi
Karup/Ensembles/1/: Karup.SHE
Karup/Ensembles/10/: Karup_DA.SHE  MIKESHE_WM_Karup.omi
Karup/Ensembles/11/: Karup_DA.SHE  MIKESHE_WM_Karup_DA.omi
Karup/Ensembles/12/: MIKESHE_WM_Karup.omi  MIKESHE_WM_Karup_DA.omi
Karup/Ensembles/13/: MIKESHE_WM_Karup_DA.omi
Karup/Ensembles/14/: Karup.SHE  MIKESHE_WM_Karup.omi
Karup/Ensembles/15/: Karup_DA.SHE  MIKESHE_WM_Karup_DA.omi
Karup/Ensembles/16/: Karup_DA.SHE  MIKESHE_WM_Karup.omi  MIKESHE_WM_Karup_DA.omi
Karup/Ensembles/17/: Karup_DA.SHE  MIKESHE_WM_Karup.omi
Karup/NoDA/: MIKESHE_WM_Karup.omi
Karup/ObsModel/: MIKESHE_WM_Karup_DA.omi
Karup/XML/: MikeSheConfig.txt
OpenDA_Source/: openda_1.ipr  openda_1.iws
OpenDA_Source/algorithms/: module.properties
OpenDA_Source/application/: module.properties
OpenDA_Source/core/native/tests/test_individual/: Makefile.am  callfunc.c  obs_d97.sql  omi_no2_EU_20060202.nc  oscill.xml  test6.c  test_par_modbuild.xml  test_xml_01.c  test_xml_met_treevector.c
OpenDA_Source/dotnet_bridge/: module.properties
OpenDA_Source/model_efdc/: module.properties
OpenDA_Source/model_efdc_dll/: build_castor.xml  module.properties
OpenDA_Source/model_example_blackbox/: module.properties
OpenDA_Source/model_hspf/: module.properties
OpenDA_Source/model_swan/: module.properties
OpenDA_Source/model_wflow/: build_castor.xml
OpenDA_Source/models/: module.properties
OpenDA_Source/module_template/: module.properties
OpenDA_Source/observers/: module.properties
OpenDA_Source/scripts/: openda_build_native_USE_EXISTING_NATIVE.sh
Test_5x5/: plot1.m  results.m  results5.m
Test_5x5/algorithm/: EnKF.xml
trunk/OpenDA_Source/: .classpath  build.xml  openda_1.ipr  openda_1.iws  project.properties
trunk/OpenDA_Source/core/native/tests/test_unit/: Makefile.am  Makefile.in  file_test.c  test4.c  test_obsdescr.c  test_obsdescr_table.c  test_packing.c  test_reltable.c  test_strings_01.c  test_tree_01.c  unit.c
trunk/Test_5x5/: results.m
(+3208 files in other folders)
