check_PROGRAMS = test2 test4 test5 test6 test7 
#test_tree_01 \
#	       test_xml_01\
#               test6 ftest_tree \
#               test_par_modbuild test_performance test_xml_02  test_xml_met_treevector
test2_SOURCES = test2.c
test2_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS}
test4_SOURCES = test4.c 
test4_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS}
test5_SOURCES = test5.f 
test5_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS}
test6_SOURCES = test6.c 
test6_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
test7_SOURCES = test7.c 
test7_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
#test_tree_01_SOURCES = test_tree_01.c 
#test_tree_01_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
#test_xml_01_SOURCES = test_xml_01.c 
#test_xml_01_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
#test_xml_met_treevector_SOURCES = test_xml_met_treevector.c 
#test_xml_met_treevector_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
#test_xml_02_SOURCES = test_xml_02.c 
#test_xml_02_LDADD =  -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
#test_par_modbuild_SOURCES = test_par_modbuild.f90
#test_par_modbuild_LDADD = -L../../examples/oscill/src -loscill \
#                          -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 

#ftest_tree_SOURCES = ftest_tree.f90 
#ftest_tree_LDADD = -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 
#ftest1_SOURCES = ftest1.f callfunc.c
#ftest1_LDADD = -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS}

#test_performance_SOURCES = test_performance.f90
#test_performance_LDADD = -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS} 

#test_netcdf_SOURCES = test_netcdf.c

TESTS=test2 test4 test5 test6 test7 



INCLUDES = -I../../include
AM_FFLAGS= -I../../include
AM_FCFLAGS= -I../../include


