check_PROGRAMS = unit
unit_SOURCES = unit.c CuTest.c test_interface.c test1.c test4.c test6.c \
test_tree_01.c test_strings_01.c file_test.c test_matrix.c test_packing.c \
test_obsdescr_table.c test_obsdescr.c test_reltable.c
unit_LDADD = -lcta ${LIBS_EXT} ${LAPACK_LIBS} ${BLAS_LIBS} ${FLIBS}

TESTS=unit

INCLUDES = -I../../include

